# jessica

./: .clang-format  .clang-tidy  .codecov.yml  .cppcheck-suppressions  .eslintrc.json  .gitignore  .gitmodules  .iwyu-suppressions  .mypy.ini  .prettierignore  .prettierrc  .prospector.yaml  .pylintrc  .yamllint.yml  CMakeLists.txt  Gemfile  LICENSE.md  README.md  package-lock.json  package.json  requirements-linter.txt  tox.ini
.github/encrypted/: github-ci-private.key.gpg
.github/patches/: run-clang-tidy.patch
.github/scripts/: format.sh  formatter.sh  linters.sh
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  coverage.yml  documentation.yml  emscripten.yml  format.yml  linters.yml  metrics.yml  sanitizer.yml  scan-build.yml
config/: apt-get.txt  vcpkg_emscripten.txt  vcpkg_windows.txt
config/cmake/: vcpkg_windows.txt  vcpkg_x64-windows.txt
config/emscripten/: vcpkg.json
config/windows/: vcpkg.json
doc/: Architecture.adoc  Backend.adoc  Building.adoc  Coding style.adoc  Emscripten.adoc  Frontend.adoc
doc/highlight/: highlight.min.js
doc/programming/: Coding style.adoc
include/jessica/: compat.h
include/jessica/calc/geotechnical/: decorator_meyerhof.h  meyerhof.h  meyerhof_concept.h  meyerhof_impl.h
include/jessica/data/geotechnical/: decorator_foundation_strip.h  foundation_strip.h  foundation_strip_concept.h  foundation_strip_impl.h
include/jessica/data/load/: decorator_vertical_eccentric.h  vertical_eccentric.h  vertical_eccentric_concept.h  vertical_eccentric_impl.h
include/jessica/helper/: accessor.h  attribute.h  cfi.h  constexpr.h  poo.h  string.h  template.h
include/jessica/helper/adapter/: spdlog.h
include/jessica/helper/adapter/json_parser/: json_nlohmann.h  json_parser.h  json_simdjson.h
include/jessica/helper/adapter/webservice/: drogon.h  restbed.h
include/jessica/helper/cereal/: memory.h
include/jessica/helper/clean/cereal/: cereal.h  json.h  memory.h
include/jessica/helper/clean/drogon/: drogon.h
include/jessica/helper/clean/spdlog/: spdlog.h  stdout_sinks.h
include/jessica/test/: test.h
include/jessica/util/decorator/: end.h  log_call.h  log_duration.h  macro.h  start.h
include/jessica/util/math/: hash.h
src/: CMakeLists.txt
src/angular/: .gitignore  CMakeLists.txt  angular.json  cypress.config.js  cypress.json  lighthouserc.js  pa11y.json  package-lock.json  package.json  tsconfig.json
src/angular/cypress/integration/app-main/calc/geotechnical/: meyerhof.spec.js
src/angular/projects/app-main/: karma.conf.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.spec.json
src/angular/projects/app-main/src/: index.html  polyfills.ts  test.ts
src/angular/projects/app-main/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/angular/projects/app-main/src/app/ui/main/: main.component.html  main.component.spec.ts  main.component.ts
src/angular/projects/app-main/src/assets/i18n/: en.json  fr.json
src/angular/projects/app-main/src/environments/: environment.ts
src/angular/projects/app-main/src/locale/: messages.fr-FR.xlf  messages.xlf
src/angular/projects/jessica/: README.md  karma.conf.js  ng-package.json  package-lock.json  package.json  tsconfig.lib.json  tsconfig.spec.json
src/angular/projects/jessica/src/: public-api.ts
src/angular/projects/jessica/src/assets/i18n/: jessica-en.json  jessica-fr.json
src/angular/projects/jessica/src/lib/: jessica.module.ts  jessica.service.spec.ts
src/angular/projects/jessica/src/lib/util/validator/: valid-number.validator.ts
src/angular/projects/jessica/src/lib/web/wasm/: jessica-wasm.service.ts
src/angular/projects/lib-jessica/: README.md  karma.conf.js  ng-package.json  package.json
src/angular/projects/lib-jessica/data/geotechnical/: foundation-strip.ts
src/angular/projects/lib-jessica/data/load/: vertical-eccentric.ts
src/angular/projects/lib-jessica/src/: public-api.ts  test.ts
src/angular/projects/lib-jessica/src/assets/i18n/: jessica-en.json  jessica-fr.json
src/angular/projects/lib-jessica/src/lib/: lib-jessica.component.html  lib-jessica.component.spec.ts  lib-jessica.component.ts  lib-jessica.module.ts  lib-jessica.service.spec.ts  lib-jessica.service.ts
src/angular/projects/lib-jessica/src/lib/util/translation/: translate-mock.pipe.ts
src/angular/projects/preprocess/: preprocess.py  translation.py
src/angular/projects/toolbox/: README.md  karma.conf.js  ng-package.json  package-lock.json  package.json  tsconfig.lib.json  tsconfig.spec.json
src/angular/projects/toolbox/src/: public-api.ts  test.ts
src/angular/projects/toolbox/src/lib/: toolbox.component.spec.ts  toolbox.component.ts  toolbox.module.ts  toolbox.service.ts
src/angular/projects/toolbox/src/lib/translate/: i18n-form.ts  multi-translate-http-loader.ts
src/backend/: CMakeLists.txt
src/backend/calc/geotechnical/: meyerhof.cc
src/backend/data/geotechnical/: foundation_strip.cc
src/backend/data/load/: vertical_eccentric.cc
src/backend/jessica/helper/adapter/webservice/: drogon.cc  restbed.cc
src/calc/geotechnical/: CMakeLists.txt  meyerhof.cc
src/data/: CMakeLists.txt
src/data/geotechnical/: foundation_strip.cc
src/data/load/: vertical_eccentric.cc
src/javascript/: CMakeLists.txt
src/javascript/wasm/: CMakeLists.txt  bindings-test.cc  bindings-test.cpp  bindings-web.cc  bindings-web.cpp  bindings.cpp
src/main/: CMakeLists.txt  main1.cc
test/: CMakeLists.txt
test/angular/: CMakeLists.txt
test/backend/: CMakeLists.txt
test/backend/calc/: CMakeLists.txt
test/backend/calc/geotechnical/: CMakeLists.txt  meyerhof.cc
test/backend/data/: CMakeLists.txt
test/backend/data/geotechnical/: foundation_strip.cc
test/backend/data/load/: vertical_eccentric.cc
test/backend/util/: CMakeLists.txt  decorator.cc
test/calc/geotechnical/: CMakeLists.txt  meyerhof.cc
test/data/: CMakeLists.txt
test/data/geotechnical/: foundation_strip.cc
test/data/load/: vertical_eccentric.cc
test/javascript/: CMakeLists.txt  index.html  jessica.test.js.in  package.json.in
(+37 files in other folders)
