set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
add_library(jessica dummy.cc)
if(BUILD_SHARED_LIBS)
  target_compile_definitions(jessica PRIVATE "JESSICA_BUILDING_DLL")
  if(NOT EMSCRIPTEN)
    target_link_libraries(jessica PUBLIC "restbed-shared")
  endif()
  add_library(jessica::shared ALIAS jessica)
else(BUILD_SHARED_LIBS)
  target_compile_definitions(jessica PUBLIC "JESSICA_STATIC_LIB")
  if(NOT EMSCRIPTEN)
    target_link_libraries(jessica PUBLIC "restbed-static")
  endif()
  add_library(jessica::static ALIAS jessica)
endif(BUILD_SHARED_LIBS)
target_link_libraries(jessica PUBLIC "${DROGON_LIB}" "${TRANTOR_LIB}"
                                     "${JSONCPP_LIBRARIES}")

if(NOT DEFINED EMSCRIPTEN)
  target_sources(jessica PRIVATE jessica/helper/adapter/webservice/restbed.cc)
  target_sources(jessica PRIVATE jessica/helper/adapter/webservice/drogon.cc)
  target_include_directories(jessica PUBLIC ${JSONCPP_INCLUDE_DIRS})
endif()
target_include_directories(jessica PUBLIC ${Jessica_SOURCE_DIR}/include)
